--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="./public/images/logo-icon.png">
-    <title>Happy</title>
-</head>
-<body>
+        <link rel="stylesheet" href="./public/css/main.css">
+        <link rel="stylesheet" href="./public/css/animations.css">
+        <link rel="stylesheet" href="./public/css/page-landing.css">
+        
 
-    <header>
-        <img src="./public/images/logo.svg" alt="Logomarca de Happy">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;1,800&display=swap" rel="stylesheet">
 
-        <div>
-            <strong>
-                Sao Jose dos Campos
-            </strong>
-            <p>
-                Sao Paulo
-            </p>
+        <link rel="icon" href="./public/images/logo-icon.png">
+
+
+        <title>Happy</title>
+    </head>
+    <body>
+
+        <div id="page-landing">
+            <div id="container">
+
+                <header>
+                    <img class="animate-up" id="logo" src="./public/images/logo.svg" alt="Logomarca de Happy">
+
+                    <div class="location animate-up">
+                        <strong>
+                            Sao Jose dos Campos
+                        </strong>
+                        <p>
+                            Sao Paulo
+                        </p>
+                    </div>
+                </header>
+
+                <main>
+                    <h1 class="animate-up">Leve felicidade para o mundo</h1>
+
+                    <section class="visit">
+                        <p class="animate-up">
+                            Visite orfanatos e mude o dia de muitas criancas
+                        </p>
+
+                        <a href="#" title="Visite orfanatos" class="animate-up">
+                            <img src="./public/images/arrow.svg" alt="Ir para o mapa">
+                        </a>
+                    </section>
+                </main>
+            </div>
         </div>
-    </header>
-    
-</body>
+
+    </body>
 </html>
