--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -44,6 +44,8 @@
 
                         <div class="map-container">
                             <div id="mapid"></div>
+                            <input type="hidden" name="lat">
+                            <input type="hidden" name="lng">
                             <footer>
                                 <a href="" id="select-point">
                                     Clique no mapa para adicionar a localizacao
@@ -55,7 +57,7 @@
                             <label for="name">
                                 Nome
                             </label>
-                            <input id="name" name="name" type="text" required>
+                            <input id="name" name="name" type="text" required="required">
                         </div>
 
                         <div class="input-block">
@@ -65,14 +67,14 @@
                                     Maximo de 300 caracteres
                                 </span>
                             </label>
-                            <textarea id="about" name="about" type="text" required></textarea>
+                            <textarea id="about" name="about" type="text" required="required"></textarea>
                         </div>
 
                         <div class="input-block">
                             <label for="whatsapp">
                                 Numero de Whatsapp
                             </label>
-                            <input id="whatsapp" name="whatsapp" type="text" required>
+                            <input id="whatsapp" name="whatsapp" type="text" required="required">
                         </div>
 
                         <div class="input-block images">
@@ -80,21 +82,21 @@
                                 Fotos
                             </label>
 
-                            <div class="new-upload">
+                            <div class="images-upload" id="images">
 
-                                    <div class="images-upload" id="images"></div>
-                                <input name="images" placeholder="Cole o link da foto aqui" required>
+                                <div class="new-upload">
+                                    <input name="images" placeholder="Cole o link da foto aqui" required="required">
 
-                                <span>
-                                    <img src="./public/images/remove-file.svg" alt="remover foto">
-                                </span>
+                                    <span onclick="deleteField(event)">
+                                        <img src="./public/images/remove-file.svg" alt="remover foto">
+                                    </span>
 
+                                </div>
                             </div>
 
-                            <button type="button">
+                            <button onclick="addPhotoField()" type="button">
                                 <img src="./public/images/add-file.svg" alt="Nova imagem">
                             </button>
-
                         </div>
 
                     </fieldset>
@@ -107,14 +109,14 @@
                                 Instrucoes
 
                             </label>
-                            <textarea id="instructions" name="instructions" type="text" required></textarea>
+                            <textarea id="instructions" name="instructions" type="text" required="required"></textarea>
                         </div>
 
                         <div class="input-block">
                             <label for="opening_hours">
                                 Horario das visita
                             </label>
-                            <input id="opening_hours" name="opening_hours" type="text" required>
+                            <input id="opening_hours" name="opening_hours" type="text" required="required">
                         </div>
 
                         <div class="input-block">
@@ -122,7 +124,7 @@
                                 Atende fim de semana?
                             </label>
 
-                            <input type="hidden" id="open_on_weekends " name="open_on_weekends" value="1" required>
+                            <input type="hidden" id="open_on_weekends " name="open_on_weekends" value="1" required="required">
 
                             <div class="button-select">
 
