--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -128,9 +128,9 @@
 
                             <div class="button-select">
 
-                                <button type="button" class="active">Sim</button>
+                                <button data-value="1" onclick="toggleSelect(event)" type="button" class="active">Sim</button>
 
-                                <button type="button">Nao</button>
+                                <button data-value="0" onclick="toggleSelect(event)" type="button">Nao</button>
 
                             </div>
 
